--- a/notes.css
+++ b/notes.css
@@ -28,12 +28,121 @@ body {
     align-items: center;
 }
 
+.container11_lines {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid var(--color);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+
 .container12 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
-.notelist > li {
+
+.container1, .container11, .container12, .container11_lines {
+    padding: 5px;
+}
+
+
+
+button {
+    padding: 5px 10px;
+    margin: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+    background: var(--color);
+    color: var(--background);
+}
+
+#noteSubmitButton {
+    padding: 5px 10px;
+    margin: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+#noteSubmitButton:hover {
+    background: var(--color);
+    color: var(--background);
+}
+
+.form-element {
+    margin-bottom: 15px;
+}
+
+.form-element label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-element input[type="text"], .form-element input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--color);
+    box-sizing: border-box;
+}
+
+.form-element input[type="submit"] {
+    width: auto; 
+}
+
+#noteList {
+    list-style-type: none; /* remove bullets from list */
+    padding: 0; /* remove default padding */
+}
+
+#noteList li {
+    border: 1px solid var(--color);
+    padding: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+}
+
+#noteList li button {
+    margin-top: 10px;
+    align-self: flex-end;
+}
+
+.label {
+    font-weight: bold;
+    color: var(--color);
+    display: block;
+}
+
+.value {
+    font-style: italic;
+    color: grey;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.value[data-done="Yes"]::before {
+    content: "✅ ";
+    color: green;
+}
+
+.value[data-done="No"]::before {
+    content: "❌ ";
     color: red;
+}
+
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    color: var(--color);
+}
+
+h2 {
+    font-size: 1em;
+    color: var(--color);
 }
